# advent-of-code-2022

./: Cargo.toml  README.md
calendar/01_calorie_counting/: Cargo.toml  pseudo.txt
calendar/01_calorie_counting/src/: lib.rs
calendar/02_rock_paper_scissors/: Cargo.toml
calendar/03_rucksack_reorganization/: Cargo.toml
calendar/03_rucksack_reorganization/src/: lib.rs
calendar/05_supply_stack/: Cargo.toml  pseudo
calendar/05_supply_stack/src/: procedure.rs
calendar/07_no_space_left_on_device/src/: filesystem.rs  lib.rs
calendar/08_treetop_tree_house/: Cargo.toml
calendar/09_rope_bridge/: pseudo
calendar/09_rope_bridge/src/: lib.rs
calendar/10_cathode-ray_tube/: Cargo.toml
calendar/10_cathode-ray_tube/src/: lib.rs
calendar/11_monkey_in_the_middle/: Cargo.toml
calendar/11_monkey_in_the_middle/src/: lib.rs
calendar/12_hill_climbing_algorithm/: Cargo.toml
calendar/13_distress_signal/: Cargo.toml
calendar/13_distress_signal/src/: lib.rs
calendar/14_regolith_reservoir/: Cargo.toml  pseudo
calendar/15_beacon_exclusion_zone/: Cargo.toml
calendar/2_rock_paper_scissors/: Cargo.toml
calendar/3_rucksack_reorganization/: Cargo.toml
calendar/4_camp_cleanup/: Cargo.toml
calendar/5_supply_stack/: Cargo.toml
calendar/7_no_space_left_on_device/: Cargo.toml
calendar/8_treetop_tree_house/: Cargo.toml
calendar/9_rope_bridge/: Cargo.toml
shared_lib/: Cargo.toml
shared_lib/src/: grid.rs  lib.rs  point.rs
tools/get-aoc/: Cargo.toml
tools/get-input/: Cargo.toml
tools/getaoc/: Cargo.toml  README.md
tools/getaoc/src/: cli.rs  date.rs
(+30 files in other folders)
